Added location functinality

--- a/web/index.html
+++ b/web/index.html
@@ -32,6 +32,8 @@
   <title>ui_flutter</title>
   <link rel="manifest" href="manifest.json">
 
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCJaz2VTTYlak33w3SfYWXuXTO3DfzZyPc"></script>
+
   <script>
     // The value below is injected by flutter build, do not touch.
     var serviceWorkerVersion = null;
